# actng

./: Cargo.toml  FIXES.md  README.md  SPEC-OVERRIDES.md  SPEC-TUI.md  SPEC.md  actng.json  install.sh
crates/actng-cli/: Cargo.toml
crates/actng-cli/src/: main.rs
crates/actng-cli/tests/: cli.rs
crates/actng-core/: Cargo.toml
crates/actng-core/src/: bayes.rs  discover.rs  entry.rs  error.rs  export.rs  import.rs  lib.rs  normalize.rs  profile.rs  tagger.rs
crates/actng-core/tests/: accuracy.rs  debug_csv.rs  fixtures.rs  postfinance.rs
crates/actng-tui/: Cargo.toml
crates/actng-tui/src/: actions.rs  app.rs  lib.rs  main.rs  modal.rs  update.rs  view.rs
crates/actng-tui/src/screens/: entries.rs  files.rs  mod.rs  overview.rs  review.rs  summary.rs  tags.rs
examples/: export_mouvements_20260708_postfinance copy.csv
testdata/bank2ynab/: README.md
testdata/sparkov/: README.md  transactions.csv
