[package]
name = "actng-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "actng"
path = "src/main.rs"

[dependencies]
actng-core = { path = "../actng-core" }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
dialoguer = "0.11"
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3.27.0"
csv = "1"
