[package]
name = "actng-core"
version = "0.1.0"
edition = "2021"
description = "Parse, normalize and tag bank statement entries: flexible CSV import, noise filtering, exact-match memory and a Naive Bayes classifier."
license = "MIT OR Apache-2.0"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
unicode-normalization = "0.1"

[dev-dependencies]
tempfile = "3.27.0"
